--- a/portafolio.html
+++ b/portafolio.html
@@ -17,16 +17,16 @@
 
     <title>Portafolio | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
 </head>
 <body>
 
     <!-- -------Header-------- -->
     <div class="header">
         <div class="content-header">
-            <div class="top-footer">
+            <div class="top-header">
                 <div class="logo-header">
-                    <img src="img/logo-aymsa.png" alt="">
+                    <a href="#"><img src="img/logo-aymsa.png" alt=""></a>
                 </div>
                 <div class="contact-header">
                     <div class="item-contact">
@@ -35,7 +35,8 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Ubicación</h3>
-                            <p>Edificio Del Café Oficina 2605. Medellín</p>
+                            <p>Edificio Del Café</p>
+                            <p>Oficina 2605. Medellín</p>
                         </div>
                     </div>
                     <div class="item-contact">
@@ -44,7 +45,8 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Horario</h3>
-                            <p>Lunes / Viernes 8:00 am a 5:00 pm    </p>
+                            <p>Lunes / Viernes</p>
+                            <p>8:00 am a 5:00 pm</p>
                         </div>
                     </div>
                     <div class="item-contact">
@@ -53,123 +55,129 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Contacto</h3>
-                            <p>info@aymsa.com +57 340 985995</p>
+                            <p>info@aymsa.com</p>
+                            <p>+57 340 985995</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="bot-header">
+        </div>
+        <div class="bot-header">
+            <div class="content-bot">
                 <nav class="navigator">
-                    <a href="#" class="link-navi">Inicio</a>
-                    <a href="#" class="link-navi">Qué es Aymsa</a>
-                    <a href="#" class="link-navi">Portafolio de servicios</a>
+                    <a href="index.html" class="link-navi">Inicio</a>
+                    <a href="quienes-somos.html" class="link-navi">Qué es Aymsa</a>
+                    <a href="portafolio.html" class="link-navi link-active">Portafolio de servicios</a>
                     <a href="#" class="link-navi">Portal clientes</a>
                 </nav>
                 <div class="search-header">
-                    <a href="#" class="icon-search"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <input type="search" name="" id="" placeholder="Buscar...">
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- ------Cover------- -->
-    <div class="cover">
-        <div class="content-cover">
-            <div class="text-cover">
-                <h1 class="title-cover">Experiencia y calidad humana <br> <b>Somos expertos</b></h1>
-                <p>Somos expertos en tercerización de servicios integrales de Talento humano, 
-                    proveemos soluciones y simplificamos las tareas de Gestión Humana</p>
+    <div class="cover cover-sg-02">
+        <div class="content-cover content-sg">
+            <div class="pos-cover">
+                <div class="text-cover">
+                    <h1 class="title-cover">Optimizamos su tiempo y recursos <br> <span class="subcover">End to End en la nube</span></h1>
+                    <p>Nos encargamos de simplificar con nuestra experiencia los procesos de Gestión humana, 
+                        permitiendo que nuestros clientes se enfoquen en las actividades estratégicas de su Empresa.</p>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- -------Mod-if----- -->
-    <div class="if">
-        <div class="content-if">
+    <div class="if if-sg">
+        <div class="content-if content-if-deg">
             <div class="head-if">
                 <h3 class="subtitle-sm">Portafolio de servicios</h3>
                 <h2 class="title-sm">Contamos con una infraestructura tecnológica que garantiza que nuestros procesos 
                     estén respaldados por herramientas tecnológicas que brindan confiabilidad y agilidad en los resultados</h2>
             </div>
             <div class="row-vis">
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/agre-people.png" alt="">
                         <h2 class="title-vis">Atracción de personal</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Nos encargamos de realizar el proceso de atracción y búsqueda de candidatos mediante el uso de 
                             herramientas tecnológicas en diferentes plataformas y modelos de búsqueda, comprometidos con 
                             el cumplimiento al 100% de los perfiles solicitados por nuestros clientes, asegurando la 
                             asertividad y oportunidad</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/select.png" alt="">
                         <h2 class="title-vis">Selección de Personal</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Efectuamos procesos de selección en línea con pruebas automatizadas que evalúan los perfiles y 
                             competencias según los requerimientos del cliente. Incluimos a requerimiento del cliente visita 
                             domiciliaria, prueba de poligrafía y estudios de seguridad</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/select.png" alt="">
                         <h2 class="title-vis">Contratación de personal</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Apoyamos en el proceso de vinculación y desvinculación de sus colaboradores</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/users.png" alt="">
                         <h2 class="title-vis">Administración de Nómina</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Manejamos un Software integral (ERP) aplicable a los diferentes tipos de nóminas, ajustado a la 
                             normatividad legal Colombiana. Contamos con un equipo altamente calificado y experto que le 
                             brinda confianza en el proceso</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/liquidation.png" alt="">
                         <h2 class="title-vis">Liquidación Seguridad Social</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Somos expertos en liquidación de planillas de seguridad social, cumpliendo los procedimientos 
                             exigidos por la UGPP</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/sst.png" alt="">
                         <h2 class="title-vis">Asesoramiento de SST</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>De acuerdo a la necesidad de cada cliente brindamos asesoría para el cumplimiento del Sistema 
                             de Gestión de Seguridad y Salud en el Trabajo</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/balance.png" alt="">
                         <h2 class="title-vis">Asesoría jurídica en relaciones laborales</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Apoyamos en la atención de consultas legales en materia laboral relacionadas con la ejecución de contratos, trabajadores activos y manejo de procesos disciplinarios.</p>
                     </div>
                 </div>
-                <div class="item-vis">
+                <div class="item-vis item-vis-col">
                     <div class="icon-vis">
                         <img src="img/salary.png" alt="">
                         <h2 class="title-vis">Recobro de incapacidades</h2>
                     </div>
-                    <div class="text-vis">
+                    <div class="text-vis text-vis-center">
                         <p>Realizamos trámite de recobro de incapacidades ante las diferentes entidades de Seguridad Social</p>
                     </div>
                 </div>
@@ -177,62 +185,40 @@
         </div>
     </div>
 
-    <!-- -----Mod-if---- -->
-    <div class="if">
+    <!-- ------Mod-if----- -->
+    <div class="if x-grey">
         <div class="content-if">
-            <div class="row-vent">
-                <div class="box-vent">
-                    <img src="img/location.svg" alt="">
-                    <h2>Presecia a nivel Nacional</h2>
-                </div>
-                <div class="box-vent">
-                    <img src="img/pro.svg" alt="">
-                    <h2>Experiencia en todos los sectores y niveles de cargo</h2>
-                </div>
-                <div class="box-vent">
-                    <img src="img/person.svg" alt="">
-                    <h2>Personal altamente capacitadol</h2>
-                </div>
-                <div class="box-vent">
-                    <img src="img/manos.svg" alt="">
-                    <h2>Nos ajustamos a las necesidades de cada cliente</h2>
-                </div>
+            <div class="head-global head-mg">
+                <h2 class="title-global">Valor agregado</h2>
+                <p>Generamos los certificados laborales, cartas de Retiro y certificados requeridos para los diferentes procesos de talento humano.</p>
             </div>
         </div>
     </div>
 
-    <!-- ------Mod-if------- -->
-    <div class="if">
+    <!-- ------Mod-if----- -->
+    <div class="if x-dark">
         <div class="content-if">
             <div class="head-global">
-                <h2 class="title-global">Acompañamos a nuestros clientes</h2>
-                <p>Buscamos suplir todas las necesidades de nuestros clientes, encargándonos de las labores claves de contratación</p>
+                <h2 class="title-global title-global-w">Ventajas de tercerización con Aymsa</h2>
             </div>
-            <div class="carousel-test">
-                <div class="card-test">
-                    <p><i class="fa-solid fa-quote-left"></i>Breve texto de testimonial que ayuda a generar confianza, cercanía y 
-                        nuevas y buenas vivencias de los afiliados frente al servicio y atención brindada por Confiamed<i class="fa-solid fa-quote-right"></i></p>
-                    <h2>Martín Sánchez <br> <span class="carge">CEO Ferias Virtuales</span></h2>        
-                    <img src="img/profile.webp" alt="">
+            <div class="row-list">
+                <div class="col-list">
+                    <p><i class="fa-solid fa-circle"></i>Optimización de tiempos y recursos.</p>
+                    <p><i class="fa-solid fa-circle"></i>Sus procesos a cargo de profesionales altamente calificados.</p>
+                    <p><i class="fa-solid fa-circle"></i>Nos ajustamos a sus necesidades y requerimientos.</p>
+                    <p><i class="fa-solid fa-circle"></i>Desarrollamos todos los procesos con una infraestructura innovadora y tecnológica.</p>
                 </div>
-                <div class="card-test">
-                    <p><i class="fa-solid fa-quote-left"></i>Breve texto de testimonial que ayuda a generar confianza, cercanía y 
-                        nuevas y buenas vivencias de los afiliados frente al servicio y atención brindada por Confiamed<i class="fa-solid fa-quote-right"></i></p>
-                    <h2>Martín Sánchez <br> <span class="carge">CEO Ferias Virtuales</span></h2>        
-                    <img src="img/profile.webp" alt="">
-                </div>
-                <div class="card-test">
-                    <p><i class="fa-solid fa-quote-left"></i>Breve texto de testimonial que ayuda a generar confianza, cercanía y 
-                        nuevas y buenas vivencias de los afiliados frente al servicio y atención brindada por Confiamed<i class="fa-solid fa-quote-right"></i></p>
-                    <h2>Martín Sánchez <br> <span class="carge">CEO Ferias Virtuales</span></h2>        
-                    <img src="img/profile.webp" alt="">
+                <div class="col-list">
+                    <p><i class="fa-solid fa-circle"></i>Alta experiencia con enfoque en calidad y oportunidad.</p>
+                    <p><i class="fa-solid fa-circle"></i>Facilitamos el desarrollo de procesos de talento humano permitiendo que nuestros.</p>
+                    <p><i class="fa-solid fa-circle"></i>Clientes se enfoquen en su negocio.</p>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- ------Mod-if----- -->
-    <div class="if">
+    <div class="if x-grey if-back">
         <div class="content-if">
             <div class="head-global">
                 <h2 class="title-global">Contáctenos</h2>
@@ -265,7 +251,7 @@
                         </div>
                         <div class="item-form">
                             <label for="input">Cuéntenos cómo podemos ayudarle</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <textarea name="" id="" cols="30" rows="6"></textarea>
                         </div>
                         <div class="bot-form">
                             <a href="#" class="btn-submit">Enviar mensaje</a>
@@ -279,21 +265,23 @@
     <!-- -------Footer------ -->
     <footer class="footer">
         <div class="content-footer">
-            <div class="col-footer">
-                <h2 class="title-col">Nuestra cultura</h2>
-                <a href="#" class="link-footer">Política de calidad</a>
-                <a href="#" class="link-footer">Visión y misión organizacional</a>
-            </div>
-            <div class="col-footer">
-                <h2 class="title-col">Soporte y ayuda</h2>
-                <a href="#" class="link-footer">Mesa de ayuda</a>
-                <a href="#" class="link-footer">Asesor tecnológico</a>
-            </div>
-            <div class="col-footer">
-                <h2 class="title-col">Contacto</h2>
-                <p>Email: Contacto@Aymsa.Co</p>
-                <p>Celular: 313 870 0607</p>
-                <p>Whatsapp: 313 870 0607</p>
+            <div class="left-footer">
+                <div class="col-footer">
+                    <h2 class="title-col">Nuestra cultura</h2>
+                    <a href="#" class="link-footer">Política de calidad</a>
+                    <a href="#" class="link-footer">Visión y misión organizacional</a>
+                </div>
+                <div class="col-footer">
+                    <h2 class="title-col">Soporte y ayuda</h2>
+                    <a href="#" class="link-footer">Mesa de ayuda</a>
+                    <a href="#" class="link-footer">Asesor tecnológico</a>
+                </div>
+                <div class="col-footer">
+                    <h2 class="title-col">Contacto</h2>
+                    <p>Email: Contacto@Aymsa.Co</p>
+                    <p>Celular: 313 870 0607</p>
+                    <p>Whatsapp: 313 870 0607</p>
+                </div>
             </div>
             <div class="aymsa-footer">
                 <img src="img/logo-aymsa-white.png" alt="">
