--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -17,16 +17,16 @@
 
     <title>¿Quiénes somos? | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
 </head>
 <body>
 
     <!-- -------Header-------- -->
     <div class="header">
         <div class="content-header">
-            <div class="top-footer">
+            <div class="top-header">
                 <div class="logo-header">
-                    <img src="img/logo-aymsa.png" alt="">
+                    <a href="#"><img src="img/logo-aymsa.png" alt=""></a>
                 </div>
                 <div class="contact-header">
                     <div class="item-contact">
@@ -35,7 +35,8 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Ubicación</h3>
-                            <p>Edificio Del Café Oficina 2605. Medellín</p>
+                            <p>Edificio Del Café</p>
+                            <p>Oficina 2605. Medellín</p>
                         </div>
                     </div>
                     <div class="item-contact">
@@ -44,7 +45,8 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Horario</h3>
-                            <p>Lunes / Viernes 8:00 am a 5:00 pm    </p>
+                            <p>Lunes / Viernes</p>
+                            <p>8:00 am a 5:00 pm</p>
                         </div>
                     </div>
                     <div class="item-contact">
@@ -53,39 +55,45 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Contacto</h3>
-                            <p>info@aymsa.com +57 340 985995</p>
+                            <p>info@aymsa.com</p>
+                            <p>+57 340 985995</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="bot-header">
+        </div>
+        <div class="bot-header">
+            <div class="content-bot">
                 <nav class="navigator">
-                    <a href="#" class="link-navi">Inicio</a>
-                    <a href="#" class="link-navi">Qué es Aymsa</a>
-                    <a href="#" class="link-navi">Portafolio de servicios</a>
+                    <a href="index.html" class="link-navi">Inicio</a>
+                    <a href="quienes-somos.html" class="link-navi link-active">Qué es Aymsa</a>
+                    <a href="portafolio.html" class="link-navi">Portafolio de servicios</a>
                     <a href="#" class="link-navi">Portal clientes</a>
                 </nav>
                 <div class="search-header">
-                    <a href="#" class="icon-search"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <input type="search" name="" id="" placeholder="Buscar...">
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- ------Cover------- -->
-    <div class="cover">
-        <div class="content-cover">
-            <div class="text-cover">
-                <h1 class="title-cover">Experiencia y calidad humana <br> <b>Somos expertos</b></h1>
-                <p>Somos expertos en tercerización de servicios integrales de Talento humano, 
-                    proveemos soluciones y simplificamos las tareas de Gestión Humana</p>
+    <div class="cover cover-sg">
+        <div class="content-cover content-sg">
+            <div class="pos-cover">
+                <div class="text-cover">
+                    <h1 class="title-cover">Experiencia y calidad humana <br> <span class="subcover">Somos expertos</span></h1>
+                    <p>Somos expertos en tercerización de servicios integrales de Talento humano, 
+                        proveemos soluciones y simplificamos las tareas de Gestión Humana</p>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- -------Mod-if----- -->
-    <div class="if">
-        <div class="content-if">
+    <div class="if if-sg">
+        <div class="content-if content-if-deg">
             <div class="head-if">
                 <h2 class="title-sm">Contamos con una infraestructura tecnológica que garantiza que nuestros procesos 
                     estén respaldados por herramientas tecnológicas que brindan confiabilidad y agilidad en los resultados</h2>
@@ -114,7 +122,7 @@
                 </div>
                 <div class="item-vis">
                     <div class="icon-vis">
-                        <img src="img/config.png" alt="">
+                        <img src="img/manos.svg" alt="">
                         <h2 class="title-vis">Valores</h2>
                     </div>
                     <div class="text-vis">
@@ -136,62 +144,8 @@
         </div>
     </div>
 
-    <!-- -----Mod-if---- -->
-    <div class="if">
-        <div class="content-if">
-            <div class="row-vent">
-                <div class="box-vent">
-                    <img src="img/location.svg" alt="">
-                    <h2>Presecia a nivel Nacional</h2>
-                </div>
-                <div class="box-vent">
-                    <img src="img/pro.svg" alt="">
-                    <h2>Experiencia en todos los sectores y niveles de cargo</h2>
-                </div>
-                <div class="box-vent">
-                    <img src="img/person.svg" alt="">
-                    <h2>Personal altamente capacitadol</h2>
-                </div>
-                <div class="box-vent">
-                    <img src="img/manos.svg" alt="">
-                    <h2>Nos ajustamos a las necesidades de cada cliente</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- ------Mod-if------- -->
-    <div class="if">
-        <div class="content-if">
-            <div class="head-global">
-                <h2 class="title-global">Acompañamos a nuestros clientes</h2>
-                <p>Buscamos suplir todas las necesidades de nuestros clientes, encargándonos de las labores claves de contratación</p>
-            </div>
-            <div class="carousel-test">
-                <div class="card-test">
-                    <p><i class="fa-solid fa-quote-left"></i>Breve texto de testimonial que ayuda a generar confianza, cercanía y 
-                        nuevas y buenas vivencias de los afiliados frente al servicio y atención brindada por Confiamed<i class="fa-solid fa-quote-right"></i></p>
-                    <h2>Martín Sánchez <br> <span class="carge">CEO Ferias Virtuales</span></h2>        
-                    <img src="img/profile.webp" alt="">
-                </div>
-                <div class="card-test">
-                    <p><i class="fa-solid fa-quote-left"></i>Breve texto de testimonial que ayuda a generar confianza, cercanía y 
-                        nuevas y buenas vivencias de los afiliados frente al servicio y atención brindada por Confiamed<i class="fa-solid fa-quote-right"></i></p>
-                    <h2>Martín Sánchez <br> <span class="carge">CEO Ferias Virtuales</span></h2>        
-                    <img src="img/profile.webp" alt="">
-                </div>
-                <div class="card-test">
-                    <p><i class="fa-solid fa-quote-left"></i>Breve texto de testimonial que ayuda a generar confianza, cercanía y 
-                        nuevas y buenas vivencias de los afiliados frente al servicio y atención brindada por Confiamed<i class="fa-solid fa-quote-right"></i></p>
-                    <h2>Martín Sánchez <br> <span class="carge">CEO Ferias Virtuales</span></h2>        
-                    <img src="img/profile.webp" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- ------Mod-if----- -->
-    <div class="if">
+    <div class="if x-grey if-back">
         <div class="content-if">
             <div class="head-global">
                 <h2 class="title-global">Contáctenos</h2>
@@ -224,7 +178,7 @@
                         </div>
                         <div class="item-form">
                             <label for="input">Cuéntenos cómo podemos ayudarle</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <textarea name="" id="" cols="30" rows="6"></textarea>
                         </div>
                         <div class="bot-form">
                             <a href="#" class="btn-submit">Enviar mensaje</a>
@@ -238,21 +192,23 @@
     <!-- -------Footer------ -->
     <footer class="footer">
         <div class="content-footer">
-            <div class="col-footer">
-                <h2 class="title-col">Nuestra cultura</h2>
-                <a href="#" class="link-footer">Política de calidad</a>
-                <a href="#" class="link-footer">Visión y misión organizacional</a>
-            </div>
-            <div class="col-footer">
-                <h2 class="title-col">Soporte y ayuda</h2>
-                <a href="#" class="link-footer">Mesa de ayuda</a>
-                <a href="#" class="link-footer">Asesor tecnológico</a>
-            </div>
-            <div class="col-footer">
-                <h2 class="title-col">Contacto</h2>
-                <p>Email: Contacto@Aymsa.Co</p>
-                <p>Celular: 313 870 0607</p>
-                <p>Whatsapp: 313 870 0607</p>
+            <div class="left-footer">
+                <div class="col-footer">
+                    <h2 class="title-col">Nuestra cultura</h2>
+                    <a href="#" class="link-footer">Política de calidad</a>
+                    <a href="#" class="link-footer">Visión y misión organizacional</a>
+                </div>
+                <div class="col-footer">
+                    <h2 class="title-col">Soporte y ayuda</h2>
+                    <a href="#" class="link-footer">Mesa de ayuda</a>
+                    <a href="#" class="link-footer">Asesor tecnológico</a>
+                </div>
+                <div class="col-footer">
+                    <h2 class="title-col">Contacto</h2>
+                    <p>Email: Contacto@Aymsa.Co</p>
+                    <p>Celular: 313 870 0607</p>
+                    <p>Whatsapp: 313 870 0607</p>
+                </div>
             </div>
             <div class="aymsa-footer">
                 <img src="img/logo-aymsa-white.png" alt="">
